Bug 1050159 - Apply correct dirty rect when AddCanvasBackgroundColorItem creates an nsDisplaySolidColor. r=mattwoodrow, a=lmandel